--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#map">Mapa główna</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Inne szlaki</a>
+          <a class="nav-link" href="#szlaki">Inne szlaki</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Wyniki ankiet</a>
@@ -97,13 +97,12 @@
       </div>
     </div>
   </div>
-  <!--SERVICES CONTENT-->
   <div class="container">
     <!--SEKCJA PROMOCYJNA-->
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__content">
-          <div class="icon d-block fas fa-paper-plane"></div>
+          <div class="icon d-block fas fa-city"></div>
           <h3 class="display-3--title mt-1">Promocja Lublina</h3>
           <p class="lh-lg">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
@@ -129,7 +128,7 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
-          <div class="icon d-block fas fa-code"></div>
+          <div class="icon d-block fas fa-user"></div>
           <h3 class="display-3--title mt-1">Pomoc dla turystów</h3>
           <p class="lh-lg">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
@@ -145,7 +144,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__content">
-          <div class="icon d-block fas fa-cloud"></div>
+          <div class="icon d-block fas fa-map-signs"></div>
           <h3 class="display-3--title mt-1">Wyznaczenie najpopularniejszych miejsc</h3>
           <p class="lh-lg">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
@@ -176,32 +175,23 @@
     </div>
   </div>
 </section>
-<!--START SECTION 7 - THE PORTFOLIO-->
+<!--SEKCJA SZLAKI-->
 <section id="szlaki" class="szlaki">
   <div class="container">
-    <div class="row text-center mt-5">
-      <h1 class="display-3 fw-bold">Latest work</h1>
+    <div class="row text-center mt-5 opis">
+      <h1 class="display-3 fw-bold">Inne szlaki</h1>
       <div class="heading-line"></div>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, officiis? Hic sunt id eius assumenda vero. Ducimus, facere eum! Eius at dolorem beatae placeat sunt? Illo cum repellat quidem! Dignissimos.</p>
+      <p class="lead">Dotychczas istniejące szlaki w Lublinie</p>
     </div>
-    <!--FILTER BUTTONS-->
-    <div class="row mt-3 mb-4 g-3 text-center">
-      <div class="col-md-12">
-        <button class="btn btn-outline-primary" type="button">All</button>
-        <button class="btn btn-outline-primary" type="button">Websites</button>
-        <button class="btn btn-outline-primary" type="button">Design</button>
-        <button class="btn btn-outline-primary" type="button">Mockup</button>
-      </div>
-    </div>
-    <!--START THE PORTFOLIO ITEMS-->
+
     <div class="row">
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-1.jpg" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
+          <img src="assets/images/portfolio/portfolio-1.png" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 1</h4>
-              <p>category project</p>
+              <h4>Jagielloński szlak Unii Lubelskiej</h4>
+              <p>Czas przejścia: 2-3 godziny</p>
             </div>
           </div>
         </div>
@@ -211,8 +201,8 @@
           <img src="assets/images/portfolio/portfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 2</h4>
-              <p>category project</p>
+              <h4>szlak pamięci żydów lubelskich</h4>
+              <p>Czas przejścia: 3-4 godziny</p>
             </div>
           </div>
         </div>
@@ -222,8 +212,8 @@
           <img src="assets/images/portfolio/portfolio-3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 3</h4>
-              <p>category project</p>
+              <h4>szlak wielokulturowy</h4>
+              <p>Czas przejścia: 3-4 godziny</p>
             </div>
           </div>
         </div>
@@ -233,63 +223,19 @@
           <img src="assets/images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 4</h4>
-              <p>category project</p>
+              <h4>szlak zabytków architektury</h4>
+              <p>Czas przejścia: 2,5-3 godziny</p>
             </div>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
         <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-5.jpg" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
+          <img src="assets/images/portfolio/portfolio-5.png" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
           <div class="portfolio-info">
             <div class="caption">
-              <h4>project name goes here 5</h4>
-              <p>category project</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-6.jpg" alt="portfolio 6 image" title="portfolio 6 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>project name goes here 6</h4>
-              <p>category project</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-7.jpg" alt="portfolio 7 image" title="portfolio 7 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>project name goes here 7</h4>
-              <p>category project</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-8.jpg" alt="portfolio 8 image" title="portfolio 8 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>project name goes here 8</h4>
-              <p>category project</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-9.jpg" alt="portfolio 9 image" title="portfolio 9 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>project name goes here 9</h4>
-              <p>category project</p>
+              <h4>szlak znanych lublinian</h4>
+              <p>Czas przejścia: 2,5-3,5 godziny</p>
             </div>
           </div>
         </div>
@@ -297,7 +243,7 @@
     </div>
   </div>
 </section> 
-<!--START SECTION 9 THE FOOTER-->
+<!--SEKCJA FOOTER-->
 <a href="#" class="shadow btn-primary rounded-circle back-to-top">
   <i class="fas fa-chevron-up"></i>
 </a>
