moved buttons and modified start and end markers

--- a/index.html
+++ b/index.html
@@ -167,12 +167,14 @@
     <div class="row text-center">
       <h1 class="display-3 fw-bold text-uppercase">Mapa główna</h1>
       <div class="heading-line"></div>
-      <button id="szlaki">Wszystkie szlaki</button>
-      <button id="szlak1">szlak 1</button>
-      <button id="szlak2">szlak 2</button>
-      <button id="szlak3">szlak 3</button>
-      <button id="szlak4">szlak 4</button>
-      <button id="szlak5">szlak 5</button>
+      <div class="button_group">
+        <button class="rounded-pill btn-rounded border-primary" id="szlaki">Wszystkie szlaki <span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlak1">Jagielloński szlak Unii Lubelskiej<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlak2">Szlak pamięci Żydów Lubelskich<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlak3">Szlak Wielokulturowy<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlak4">Szlak Zabytków Architektury<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlak5">Szlak Znanych Lublinian<span><i class="fas fa-location-arrow"></i></span></button>
+      </div>
       <div class="map-container">
         <div id="mapid"></div>
       </div>
