--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       <div class="col-md-6 intros">
         <h1 class="display-2">
           <span class="display-2--intro">Trasy turystyczne po Lublinie - serwis interaktywny</span>
-          <span class="display-2--description lh-base">tutaj będzie ogólny opis aplikacji</span>
+          <span class="display-2--description lh-base">
+          </span>
         </h1>
         <a href="#map">
           <button type="button" class="rounded-pill btn-rounded">Przejdź dalej
@@ -78,22 +79,21 @@
 <section id="services" class="services">
   <div class="container">
     <div class="row text-center">
-      <h1 class="display-3 fw-bold">Cel stworzenia aplikacji</h1>
+      <h1 class="display-3 fw-bold">Motywy stworzenia serwisu</h1>
       <div class="heading-line mb-1"></div>
     </div>
     <div class="row pt-2 pb-2 mt-0 mb-3">
       <div class="col-md-6 border-right ">
         <div class="bg-white p-3">
-          <h2 class="fw-bold text-capitalize text-center">Opis bardziej szczegółowy aplikacji/działania</h2>
+          <h2 class="fw-bold text-capitalize text-center">Główny cel</h2>
         </div>
       </div>
       <div class="col-md-6">
         <div class="bg-white p-4 text-start">
           <p class="fw-light">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-             magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Aplikacja powstała jako część pracy magisterskiej pt. "Trasy turystyczne po Lublinie serwis interaktywny".
+            Głównym celem niniejszego serwisu jest prezentacja szlaków turystycznych w Lublinie - zarówno istniejących
+             jak i propozycji oraz przedstawienie wyników  badania ankietowego przeprowadzonego wśród studentów lubelskich uczelni
           </p>
         </div>
       </div>
@@ -107,8 +107,10 @@
           <div class="icon d-block fas fa-city"></div>
           <h3 class="display-3--title mt-1">Promocja Lublina</h3>
           <p class="lh-lg">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
-            uri. Neque at placeat dolorum quidem ad dolor eum eligendi corrupti, repellendus ratione recusandae odio nam.
+            Z roku na rok liczba turystów jaka odwiedza to miasto z roku na rok staje się coraz większa. Do utrzymania trendu wzrostowego potrzebna jest
+            coraz to atrakcyjniejsza oferta turystyczna oraz odpowiednia promocja, zarówno samego miasta jak i poszczególnych obiektów wartych uwagi.
+            Odpowiednio wyznaczone i wplenione w miejską infrastrukturę szlaki turystyczne mogą uzupełnić bogatą już ofertę miejskich atrakcji turystycznych.
+            
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
             <span><i class="fas fa-arrow-right"></i></span>
@@ -133,8 +135,9 @@
           <div class="icon d-block fas fa-user"></div>
           <h3 class="display-3--title mt-1">Pomoc dla turystów</h3>
           <p class="lh-lg">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
-            uri. Neque at placeat dolorum quidem ad dolor eum eligendi corrupti, repellendus ratione recusandae odio nam.
+            Większość turystów przyjezdżających w miejsca o bogatej i różnorodnej ofercie turystycznej może mieć problem z odpowiednim doborem 
+            atrakcji. Takim miejscem może być Lublin. Rozwiązaniem tego problemu może być stworzenie serwisów przedstawiających miejską ofertę turystyczną
+            wraz ze szlakami, które mogą służyć za pomoc dla indywidualnych turystów. 
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
             <span><i class="fas fa-arrow-right"></i></span>
@@ -147,10 +150,10 @@
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__content">
           <div class="icon d-block fas fa-map-signs"></div>
-          <h3 class="display-3--title mt-1">Wyznaczenie najpopularniejszych miejsc</h3>
+          <h3 class="display-3--title mt-1">Prezentacja szlaków turystycznych</h3>
           <p class="lh-lg">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, explicabo necessitatibus. Possimus, excep
-            uri. Neque at placeat dolorum quidem ad dolor eum eligendi corrupti, repellendus ratione recusandae odio nam.
+            Z racji wielości atrakcji turystycznych w Lublinie dobrym rozwiązaniem jest uzupełnienie istniejącej oferty szlaków turystycznych o nowe pozycje.
+            Badanie przeprowadzone w związku ze stworzeniem niniejszej pracy ma na celu dopełnienie obecnej już oferty.
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
             <span><i class="fas fa-arrow-right"></i></span>
