--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/glightbox/dist/css/glightbox.css">
     <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css"/>
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/leaflet.awesome-markers.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.css">
     <link rel="stylesheet" href="node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css">
