--- a/index.html
+++ b/index.html
@@ -112,9 +112,6 @@
             Odpowiednio wyznaczone i wplenione w miejską infrastrukturę szlaki turystyczne mogą uzupełnić bogatą już ofertę miejskich atrakcji turystycznych.
             
           </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -139,9 +136,6 @@
             atrakcji. Takim miejscem może być Lublin. Rozwiązaniem tego problemu może być stworzenie serwisów przedstawiających miejską ofertę turystyczną
             wraz ze szlakami, które mogą służyć za pomoc dla indywidualnych turystów. 
           </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
         </div>
       </div>
     </div>
@@ -155,9 +149,6 @@
             Z racji wielości atrakcji turystycznych w Lublinie dobrym rozwiązaniem jest uzupełnienie istniejącej oferty szlaków turystycznych o nowe pozycje.
             Badanie przeprowadzone w związku ze stworzeniem niniejszej pracy ma na celu dopełnienie obecnej już oferty.
           </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Więcej
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -174,13 +165,17 @@
     <div class="row text-center">
       <h1 class="display-3 fw-bold text-uppercase">Mapa główna</h1>
       <div class="heading-line"></div>
-      <div class="button_group">
+      <div class="button_group">     
         <button class="rounded-pill btn-rounded border-primary" id="szlaki">Wszystkie szlaki <span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="szlak1">Jagielloński szlak Unii Lubelskiej<span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="szlak2">Szlak pamięci Żydów Lubelskich<span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="szlak3">Szlak Wielokulturowy<span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="szlak4">Szlak Zabytków Architektury<span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="szlak5">Szlak Znanych Lublinian<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlakStud">Szlak studentów<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlakUmcs">Szlak studentów UMCS<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlakKul">Szlak studentów KUL<span><i class="fas fa-location-arrow"></i></span></button>
+        <button class="rounded-pill btn-rounded border-primary" id="szlakUp">Szlak studentów UP<span><i class="fas fa-location-arrow"></i></span></button>
         <button class="rounded-pill btn-rounded border-primary" id="clearMap">Wyczyść mapę<span><i class="fas fa-minus"></i></span></button>
       </div>
       <div class="map-container">
