added new path and some minor changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" aria-current="page" href="#">Start</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Cel aplikacji</a>
+          <a class="nav-link" href="#info">Cel aplikacji</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#map">Mapa główna</a>
@@ -44,7 +44,7 @@
           <a class="nav-link" href="#szlaki">Inne szlaki</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Wyniki ankiet</a>
+          <a class="nav-link" href="#wyniki">Wyniki ankiet</a>
         </li>
       </ul>
     </div>
@@ -76,7 +76,7 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L40,101.3C80,107,160,117,240,149.3C320,181,400,235,480,218.7C560,203,640,117,720,90.7C800,64,880,96,960,117.3C1040,139,1120,149,1200,133.3C1280,117,1360,75,1400,53.3L1440,32L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
 </section>
 <!--SEKCJA FUNKCJONALNOSCI-->
-<section id="services" class="services">
+<section id="info" class="info">
   <div class="container">
     <div class="row text-center">
       <h1 class="display-3 fw-bold">Motywy stworzenia serwisu</h1>
@@ -102,8 +102,8 @@
   <div class="container">
     <!--SEKCJA PROMOCYJNA-->
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
-        <div class="services__content">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4 text-end">
+        <div class="info__content">
           <div class="icon d-block fas fa-city"></div>
           <h3 class="display-3--title mt-1">Promocja Lublina</h3>
           <p class="lh-lg">
@@ -114,21 +114,21 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__pic">
-          <img src="assets/images/Services/world_con.png" alt="marketing illustration" class="img-fluid">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4">
+        <div class="info__pic">
+          <img src="assets/images/info/world_con.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
     <!--SEKCJA PROMOCYJNA-->
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
-        <div class="services__pic">
-           <img src="assets/images/Services/Open-map.png" alt="marketing illustration" class="img-fluid">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4 text-start">
+        <div class="info__pic">
+           <img src="assets/images/info/Open-map.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__content">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4">
+        <div class="info__content">
           <div class="icon d-block fas fa-user"></div>
           <h3 class="display-3--title mt-1">Pomoc dla turystów</h3>
           <p class="lh-lg">
@@ -141,8 +141,8 @@
     </div>
     <!--SEKCJA 3-->
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
-        <div class="services__content">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4 text-end">
+        <div class="info__content">
           <div class="icon d-block fas fa-map-signs"></div>
           <h3 class="display-3--title mt-1">Prezentacja szlaków turystycznych</h3>
           <p class="lh-lg">
@@ -151,9 +151,9 @@
           </p>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__pic">
-           <img src="assets/images/Services/map_outline.png" alt="marketing illustration" class="img-fluid">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4">
+        <div class="info__pic">
+           <img src="assets/images/info/map_outline.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
@@ -184,72 +184,50 @@
     </div>
   </div>
 </section>
-<!--SEKCJA SZLAKI-->
-<section id="szlaki" class="szlaki">
+<!--SEKCJA WYNIKI ANKIET-->
+<section id="wyniki" class="wyniki">
   <div class="container">
     <div class="row text-center mt-5 opis">
-      <h1 class="display-3 fw-bold">Inne szlaki</h1>
+      <h1 class="display-3 fw-bold">Wyniki ankiet</h1>
       <div class="heading-line"></div>
-      <p class="lead">Dotychczas istniejące szlaki w Lublinie</p>
+      <p class="lead">.</p>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4 text-end">
+        <div class="info__content">
+          <div class="icon d-block fas fa-city"></div>
+          <h3 class="display-3--title mt-1">Respondenci zamieszkujący Lublin</h3>
+          <p class="lh-lg">
+            Opis
+          </p>
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4">
+        <div class="info__pic">
+          <img src="assets/images/maps/min_mapa_dzielnic.jpg" alt="mapa dzielnic" class="img-fluid">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4 text-start">
+        <div class="info__pic">
+           <img src="assets/images/info/Open-map.png" alt="marketing illustration" class="img-fluid">
+        </div>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 info mt-4">
+        <div class="info__content">
+          <div class="icon d-block fas fa-user"></div>
+          <h3 class="display-3--title mt-1">Pomoc dla turystów</h3>
+          <p class="lh-lg">
+            Większość turystów przyjezdżających w miejsca o bogatej i różnorodnej ofercie turystycznej może mieć problem z odpowiednim doborem 
+            atrakcji. Takim miejscem może być Lublin. Rozwiązaniem tego problemu może być stworzenie serwisów przedstawiających miejską ofertę turystyczną
+            wraz ze szlakami, które mogą służyć za pomoc dla indywidualnych turystów. 
+          </p>
+        </div>
+      </div>
     </div>
 
-    <div class="row">
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-1.png" alt="portfolio 1 image" title="portfolio 1 picture" class="img-fluid">
-          <div class="portfolio-info" role="button" data-toggle="modal" data-target="#Szlak1">
-            <div class="caption">
-              <h4>Jagielloński szlak Unii Lubelskiej</h4>
-              <p>Czas przejścia: 2-3 godziny</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-2.jpg" alt="portfolio 2 image" title="portfolio 2 picture" class="img-fluid">
-          <div class="portfolio-info" id="szlak2" role="button">
-            <div class="caption">
-              <h4>szlak pamięci żydów lubelskich</h4>
-              <p>Czas przejścia: 3-4 godziny</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-3.jpg" alt="portfolio 3 image" title="portfolio 3 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>szlak wielokulturowy</h4>
-              <p>Czas przejścia: 3-4 godziny</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-4.jpg" alt="portfolio 4 image" title="portfolio 4 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>szlak zabytków architektury</h4>
-              <p>Czas przejścia: 2,5-3 godziny</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-6">
-        <div class="portfolio-box shadow">
-          <img src="assets/images/portfolio/portfolio-5.png" alt="portfolio 5 image" title="portfolio 5 picture" class="img-fluid">
-          <div class="portfolio-info">
-            <div class="caption">
-              <h4>szlak znanych lublinian</h4>
-              <p>Czas przejścia: 2,5-3,5 godziny</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
   </div>
 </section> 
 <!--SEKCJA FOOTER-->
@@ -278,7 +256,7 @@
 </div>
 
     <script src="node-modules/leaflet/dist/leaflet.js"></script>
-    <script src="node-modules/leaflet-ajax/dist/leaflet.ajax.js"></script>
+    <!--<script src="node_modules/leaflet-ajax/dist/leaflet.ajax.js"></script>-->
     <script src="node-modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
     <script src="node-modules/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
