--- a/index.html
+++ b/index.html
@@ -35,17 +35,19 @@
           <a class="nav-link" aria-current="page" href="#">Start</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#info">Cel aplikacji</a>
+          <a class="nav-link" href="#info">Motywy opracowania serwisu</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#map">Mapa główna</a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link" href="#szlaki">Inne szlaki</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#wyniki">Wyniki ankiet</a>
         </li>
+      -->
       </ul>
     </div>
   </div>
@@ -79,7 +81,7 @@
 <section id="info" class="info">
   <div class="container">
     <div class="row text-center">
-      <h1 class="display-3 fw-bold">Motywy stworzenia serwisu</h1>
+      <h1 class="display-3 fw-bold">Motywy opracowania serwisu</h1>
       <div class="heading-line mb-1"></div>
     </div>
     <div class="row pt-2 pb-2 mt-0 mb-3">
@@ -185,6 +187,7 @@
   </div>
 </section>
 <!--SEKCJA WYNIKI ANKIET-->
+<!--
 <section id="wyniki" class="wyniki">
   <div class="container">
     <div class="row text-center mt-5 opis">
@@ -230,6 +233,7 @@
 
   </div>
 </section> 
+-->
 <!--SEKCJA FOOTER-->
 <a href="#" class="shadow btn-primary rounded-circle back-to-top">
   <i class="fas fa-chevron-up"></i>
@@ -256,7 +260,7 @@
 </div>
 
     <script src="node-modules/leaflet/dist/leaflet.js"></script>
-    <!--<script src="node_modules/leaflet-ajax/dist/leaflet.ajax.js"></script>-->
+    <!--<script src="node-modules/leaflet-ajax/dist/leaflet.ajax.js"></script>-->
     <script src="node-modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
     <script src="node-modules/glightbox/dist/js/glightbox.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
